# Kraapi

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: account_balance.rs  asset_info.rs  open_orders.rs  orders_and_trades.rs  server_time.rs  system_status.rs  ticker.rs  trade_balance.rs  trade_volume.rs
src/: auth.rs  client.rs  error.rs  lib.rs
src/api/: asset.rs  mod.rs
src/api/private/: account_balance.rs  add_order.rs  cancel_all_orders.rs  cancel_on_timeout.rs  cancel_order.rs  closed_orders.rs  ledger_info.rs  mod.rs  open_orders.rs  open_positions.rs  query_ledgers.rs  query_orders.rs  query_trades.rs  trade_balance.rs  trade_history.rs  trade_volume.rs
src/api/public/: asset_info.rs  asset_info.rs.orig  asset_info.rs.rej  asset_pairs.rs  mod.rs  ohlc.rs  order_book.rs  recent_trades.rs  server_time.rs  spread_data.rs  system_status.rs  ticker.rs
src/client/: mod.rs
