[package]
name = "krakenapi"
version = "0.1.0"
authors = ["Caleb Crane <calebccrane@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 =      "0.13.0"
hmac =        "0.10.1"
http =        "0.2.3"
hyper =       { version = "0.14.2", features = ["client", "http1", "runtime", "tcp"] }
hyper-tls =   "0.5.0"
indexmap =    "1.6.1"
serde =       { version = "1.0", features = ["derive"] }
serde_json =  "1.0.60"
sha2 =        "0.9.3"

[dev-dependencies]
tokio = { version = "1.0.1", features = ["rt-multi-thread", "net", "macros"] }
