[package]
name = "kraapi"
description = "Asynchronous HTTP client for the Kraken Cryptocurrency Exchange"
authors = ["Caleb Crane <calebccrane@gmail.com>"]
repository = "https://github.com/Fuzzy-Math/Kraapi"
version = "0.3.0"
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["kraken", "crypto", "cryptocurrency", "api"]
categories = ["api-bindings", "asynchronous", "cryptography::cryptocurrencies", "web-programming::http-client", "network-programming"]

[dependencies]
base64 =      "0.13.0"
hmac =        "0.11.0"
http =        "0.2.5"
hyper =       { version = "0.14.14", features = ["client", "http1", "runtime", "tcp"] }
hyper-tls =   "0.5.0"
indexmap =    "1.7.0"
serde =       { version = "1.0", features = ["derive"] }
serde_json =  "1.0.68"
sha2 =        "0.9.8"

[dev-dependencies]
tokio = { version = "1.0.1", features = ["rt-multi-thread", "net", "macros"] }
